<resources>
    <string name="app_name">DigitalNoticeBoard</string>
    <string name="title_activity_sample_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="native_home_title">Digital Notice Board</string>
    <string name="native_login_title">LOGIN</string>
    <string name="native_signup_title">SIGNUP</string>
    <string name="native_login_activity_title">Login</string>
    <string name="native_login_activity_loginButton_title">Login</string>
    <string name="native_login_activity_signupButton_title">Signup</string>
</resources>
