<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="226dp"
        android:layout_margin="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:background="#6a1b9a"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="68dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="@string/native_home_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40dp"
            android:editable="false"
            android:background="@android:color/transparent"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="#f9a825"
                android:text="@string/native_login_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonSignup"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:background="#f9a825"
                android:text="@string/native_signup_title"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>