<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/white"
android:orientation="vertical"
tools:context=".NativeSignupActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="226dp"
    android:layout_margin="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:background="#6a1b9a"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="72dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:editable="false"
        android:inputType="none"
        android:text="Signup"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40dp" />

</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="226dp"
    android:layout_margin="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Username"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="19dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="#f9a825"
            android:text="@string/native_login_activity_signupButton_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:background="#f9a825"
            android:text="@string/native_login_activity_loginButton_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>
</LinearLayout>
</LinearLayout>